# factorial

./: README.md  factorial.py  factorial_tests.py  requirements.txt  setup.cfg
