[metadata]
name = factorial
version = 0.0.1
author = Marc Mertens
author_email = marc.mertens@skillsoft.com
description = A small example module
long_description = file: README.md
long_description_content_type = text/markdown
# This is needed to ensure that we create a distribution package containing
# a module that installs the module itself and not a package containing the 
# module. So we can use 'python -m factorial' instead of 
# 'python -m factorial.factorial' 
py_modules = "factorial"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
#package_dir =
#    = src
#packages = find:
python_requires = >=3.6

#[options.packages.find]
#where = src



